# Corrected clipping issue in IE6 with h3 elements in left and right side menus # Corrected automatic centering of page in IE6 # Corrected display issue in IE6 with hovering over "canada.gc.ca" link
git-svn-id: https://svn.ircan.gc.ca/svn/theme-clf2-nsi2@33 27b413b2-b569-4c5a-91b7-c399223a659e

--- a/theme-clf2-nsi2/css/theme-clf2-nsi2-ie6.css
+++ b/theme-clf2-nsi2/css/theme-clf2-nsi2-ie6.css
@@ -4,7 +4,7 @@ Terms and conditions of use: http://tbs-sct.ircan.gc.ca/projects/gcwwwtemplates/
 Conditions régissant l'utilisation : http://tbs-sct.ircan.gc.ca/projects/gcwwwtemplates/wiki/Conditions
 */
 #cn-body-inner-3col, #cn-body-inner-2col, #cn-body-inner-1col {width: auto;}
-body {margin: 0 auto; width: 780px;}
+body {margin: 0 auto; width: 780px; position: relative;}
 
 /*** Expandable page CSS / Le CSS pour une page extensible ***/
 /* body {width: auto;}
@@ -24,12 +24,13 @@ body {margin: 0 auto; width: 780px;}
 #cn-cmb ul li {width: 16.1%; padding-bottom: 1px; margin-bottom: -1px;}
 #cn-cmb ul li a {height: 1.25em;}
 #cn-cmb #cn-cmb1 a {border: none;}
-#cn-cmb6 a:hover, #cn-cmb6 a:active, #cn-cmb6 a:focus {width: 104%;}
+#cn-cmb6 a:hover, #cn-cmb6 a:active, #cn-cmb6 a:focus {width: 104%; position: relative;}
 #cn-bcrumb ol {margin: 1px 0 0 0; clear: left; line-height: 1.25em; margin-top: -13px;}
 #cn-bcrumb li {padding-bottom: 3px;}
 
 #cn-left-col li, #cn-right-col li {display: inline-block;}
-.cn-left-col-default h3 {position: relative; top: 0; left: 0; width: 100%; margin-bottom: -1px;}
+.cn-left-col-default h3, .cn-right-col-default h3 {position: relative; top: 0; left: 0;}
+.cn-left-col-default h3 {width: 93%; margin-bottom: -1px;}
 .cn-left-col-default ul, .cn-right-col-default ul {margin-left: 0px;}
 .cn-left-col-default ul ul, .cn-right-col-default ul ul {margin-left: 40px;}
 .cn-left-col-default li, .cn-right-col-default li {margin-left: auto;}
@@ -43,7 +44,7 @@ body {margin: 0 auto; width: 780px;}
 #cn-pd-ul li {border-top: none;}
 .cn-right-col-default div {border: 1px solid #000; margin-bottom: 10px;}
 .cn-right-col-default div p {margin: 1em 9px 1em 9px;}
-.cn-right-col-default h3 {position: relative; top: 0; left: 0; width: 100%;}
+.cn-right-col-default h3 {width: 95%;}
 .cn-right-col-default h3 a {margin: -2px 0 -2px -5px;}
 
 #cn-right-col-gap {right: 2.6%;}
